// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataForm matches snapshot with simple type 1`] = `
<Fragment>
  <ErrorBoundary
    error="errorBoundary.text"
  >
    <Form
      ArrayFieldTemplate={[Function]}
      ErrorList={[Function]}
      FieldTemplate={[Function]}
      ObjectFieldTemplate={[Function]}
      className="value-section"
      disabled={false}
      formData={123}
      liveValidate={true}
      noHtml5Validate={false}
      noValidate={false}
      omitExtraData={false}
      onChange={[Function]}
      safeRenderCompletion={false}
      schema={
        Object {
          "description": "Brightness Level / The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
          "title": "brightness",
          "type": "number",
        }
      }
      showErrorList={false}
      uiSchema={
        Object {
          "ui:description": "Brightness Level / The brightness level for the light on the device. Can be specified as 1 (high), 2 (medium), 3 (low)",
          "ui:disabled": false,
        }
      }
      widgets={
        Object {
          "CheckboxWidget": [Function],
          "DateWidget": [Function],
          "SelectWidget": [Function],
        }
      }
    >
      <CustomizedPrimaryButton
        className="submit-button"
        disabled={false}
        iconProps={
          Object {
            "iconName": "CloudUpload",
          }
        }
        text="text"
      />
      <CustomizedDefaultButton
        className="preview-payload-button"
        disabled={false}
        iconProps={
          Object {
            "iconName": "Code",
          }
        }
        onClick={[Function]}
        text="deviceSettings.previewPayloadButtonText"
      />
    </Form>
  </ErrorBoundary>
  <StyledWithResponsiveMode
    hidden={true}
    modalProps={
      Object {
        "className": "delete-dialog",
        "isBlocking": false,
      }
    }
    onDismiss={[Function]}
  >
    <div
      className="monaco-editor"
    >
      <React.Suspense
        fallback={
          <StyledSpinnerBase
            size={3}
            title="loading"
          />
        }
      >
        <React.Lazy
          height="275px"
          language="json"
          options={
            Object {
              "automaticLayout": true,
              "readOnly": true,
            }
          }
        />
      </React.Suspense>
    </div>
    <StyledDialogFooterBase>
      <CustomizedPrimaryButton
        onClick={[Function]}
        text="common.maskedCopyableTextField.copy.label"
      />
    </StyledDialogFooterBase>
  </StyledWithResponsiveMode>
</Fragment>
`;

exports[`dataForm matches snapshot with unsupported type 1`] = `
<Fragment>
  <form
    className="json-editor"
  >
    <Component
      tooltipText="notifications.interfaceSchemaNotSupported"
    >
      deviceContent.value
    </Component>
    <div
      className="monaco-editor"
    >
      <React.Suspense
        fallback={
          <StyledSpinnerBase
            size={3}
            title="loading"
          />
        }
      >
        <React.Lazy
          height="30vh"
          language="json"
          onChange={[Function]}
          options={
            Object {
              "automaticLayout": true,
              "readOnly": false,
            }
          }
          value="123"
        />
      </React.Suspense>
    </div>
    <CustomizedPrimaryButton
      className="submit-button"
      disabled={false}
      iconProps={
        Object {
          "iconName": "CloudUpload",
        }
      }
      text="text"
    />
    <CustomizedDefaultButton
      className="preview-payload-button"
      disabled={false}
      iconProps={
        Object {
          "iconName": "Code",
        }
      }
      onClick={[Function]}
      text="deviceSettings.previewPayloadButtonText"
    />
  </form>
  <StyledWithResponsiveMode
    hidden={true}
    modalProps={
      Object {
        "className": "delete-dialog",
        "isBlocking": false,
      }
    }
    onDismiss={[Function]}
  >
    <div
      className="monaco-editor"
    >
      <React.Suspense
        fallback={
          <StyledSpinnerBase
            size={3}
            title="loading"
          />
        }
      >
        <React.Lazy
          height="275px"
          language="json"
          options={
            Object {
              "automaticLayout": true,
              "readOnly": true,
            }
          }
        />
      </React.Suspense>
    </div>
    <StyledDialogFooterBase>
      <CustomizedPrimaryButton
        onClick={[Function]}
        text="common.maskedCopyableTextField.copy.label"
      />
    </StyledDialogFooterBase>
  </StyledWithResponsiveMode>
</Fragment>
`;
